--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ kotlin.version.snapshot=1.4.255-SNAPSHOT
 junit_version=4.12
 infra_version=0.1.0-dev-47
 jackson_version=2.10.0.pr1
-dokka_version=0.10.1
+dokka_version=1.4.0-dev-35
 native.deploy=false
 validator_version=0.2.3
 knit_version=0.1.6
