--- a/gradle/dokka.gradle
+++ b/gradle/dokka.gradle
@@ -5,42 +5,36 @@
 apply plugin: 'kotlin'
 apply plugin: 'org.jetbrains.dokka'
 
-dokka {
-    outputFormat = 'html'
-    outputDirectory = "$buildDir/dokka"
+def documentedSubprojects = ["kotlinx-serialization-core",
+                             "kotlinx-serialization-cbor",
+                             "kotlinx-serialization-properties",
+                             "kotlinx-serialization-hocon",
+                             "kotlinx-serialization-protobuf"]
+subprojects {
+    if (!(name in documentedSubprojects)) return
+    apply plugin: 'org.jetbrains.dokka'
+    tasks.named('dokkaHtml') {
+        outputDirectory = file("build/dokka")
+        dokkaSourceSets {
+            configureEach {
+                includes.from(rootProject.file('dokka/moduledoc.md').path)
 
-    subProjects = ["kotlinx-serialization-core",
-                   "kotlinx-serialization-cbor",
-                   "kotlinx-serialization-properties",
-//                   "kotlinx-serialization-hocon",  todo: dokka treats docs as multiplatform while it is jvm-only
-                   "kotlinx-serialization-protobuf"]
+                perPackageOption {
+                    prefix.set("kotlinx.serialization")
+                    reportUndocumented.set(false)
+                    skipDeprecated.set(true)
+                }
 
-    multiplatform {
-        global {
-            includes = ['dokka/moduledoc.md']
-
-            perPackageOption {
-                prefix = "kotlinx.serialization"
-                reportUndocumented = false
-                skipDeprecated = true
-            }
-
-            perPackageOption {
-                prefix = "kotlinx.serialization.internal"
-                suppress = true
-                reportUndocumented = false
+                perPackageOption {
+                    prefix.set("kotlinx.serialization.internal")
+                    suppress.set(true)
+                    reportUndocumented.set(false)
+                }
             }
         }
-        common {}
-        jvm {}
-        js {}
-        'native' {}
     }
 }
 
-dokka.doLast {
-    copy {
-        from 'dokka/style.css'
-        into "$buildDir/dokka"
-    }
+tasks.named("dokkaHtmlMultiModule") {
+    documentationFileName.set("MODULE.md")
 }
